[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "NGIAB-Spotpy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.8.1",
    "dataretrieval>=1.1.0",
    "geopandas==1.1.2",
    "matplotlib>=3.10.7",
    "mpi4py>=4.1.1",
    "numpy>=2.3.5",
    "netcdf4==1.7.3",
    "h5netcdf==1.8.1",
    "pandas>=2.3.2,<3.0.0",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "spotpy>=1.6.6",
    "tensorboardx>=2.6.4",
    "xarray>=2025.12.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[project.scripts]
calibration = "cli:main"

[tool.setuptools]
package-dir = {"" = "src", "merge_catchment" = "merge_catchment"}
packages = ["merge_catchment"]
py-modules = ["calibration", "cli", "cal_utils", "helper", "plots"]

[tool.ruff]
line-length = 100
exclude = [
    ".html",
    ".js",
    ".css",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
